--- a/src/assets/scss/now-ui-kit/mixins/_navbar.scss
+++ b/src/assets/scss/now-ui-kit/mixins/_navbar.scss
@@ -59,6 +59,8 @@
         .navbar-translate{
           width: 100%;
           position: absolute;
+          top: 0;
+          height: 100%;
           right: 2vw;
           display: flex;
           -ms-flex-pack: justify!important;
